// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Radio > Snapshots > should apply 'border' appearance classes 1`] = `
<div>
  <label
    class="_radio_ec96d8 _radio--primary_ec96d8 _radio--border_ec96d8 _radio--md_ec96d8"
  >
    <input
      class="_radio__input_ec96d8"
      type="radio"
    />
    <span
      class="_radio__control_ec96d8"
    />
    <div
      class="_radio__text_ec96d8"
    >
      Radio
    </div>
  </label>
</div>
`;

exports[`Radio > Snapshots > should apply 'critical' skin classes 1`] = `
<div>
  <label
    class="_radio_ec96d8 _radio--critical_ec96d8 _radio--md_ec96d8"
  >
    <input
      class="_radio__input_ec96d8"
      type="radio"
    />
    <span
      class="_radio__control_ec96d8"
    />
    <div
      class="_radio__text_ec96d8"
    >
      Radio
    </div>
  </label>
</div>
`;

exports[`Radio > Snapshots > should apply 'default' appearance classes 1`] = `
<div>
  <label
    class="_radio_ec96d8 _radio--primary_ec96d8 _radio--md_ec96d8"
  >
    <input
      class="_radio__input_ec96d8"
      type="radio"
    />
    <span
      class="_radio__control_ec96d8"
    />
    <div
      class="_radio__text_ec96d8"
    >
      Radio
    </div>
  </label>
</div>
`;

exports[`Radio > Snapshots > should apply 'lg' size classes 1`] = `
<div>
  <label
    class="_radio_ec96d8 _radio--primary_ec96d8 _radio--lg_ec96d8"
  >
    <input
      class="_radio__input_ec96d8"
      type="radio"
    />
    <span
      class="_radio__control_ec96d8"
    />
    <div
      class="_radio__text_ec96d8"
    >
      Radio
    </div>
  </label>
</div>
`;

exports[`Radio > Snapshots > should apply 'md' size classes 1`] = `
<div>
  <label
    class="_radio_ec96d8 _radio--primary_ec96d8 _radio--md_ec96d8"
  >
    <input
      class="_radio__input_ec96d8"
      type="radio"
    />
    <span
      class="_radio__control_ec96d8"
    />
    <div
      class="_radio__text_ec96d8"
    >
      Radio
    </div>
  </label>
</div>
`;

exports[`Radio > Snapshots > should apply 'primary' skin classes 1`] = `
<div>
  <label
    class="_radio_ec96d8 _radio--primary_ec96d8 _radio--md_ec96d8"
  >
    <input
      class="_radio__input_ec96d8"
      type="radio"
    />
    <span
      class="_radio__control_ec96d8"
    />
    <div
      class="_radio__text_ec96d8"
    >
      Radio
    </div>
  </label>
</div>
`;

exports[`Radio > Snapshots > should apply 'sm' size classes 1`] = `
<div>
  <label
    class="_radio_ec96d8 _radio--primary_ec96d8 _radio--sm_ec96d8"
  >
    <input
      class="_radio__input_ec96d8"
      type="radio"
    />
    <span
      class="_radio__control_ec96d8"
    />
    <div
      class="_radio__text_ec96d8"
    >
      Radio
    </div>
  </label>
</div>
`;

exports[`Radio > Snapshots > should apply 'success' skin classes 1`] = `
<div>
  <label
    class="_radio_ec96d8 _radio--success_ec96d8 _radio--md_ec96d8"
  >
    <input
      class="_radio__input_ec96d8"
      type="radio"
    />
    <span
      class="_radio__control_ec96d8"
    />
    <div
      class="_radio__text_ec96d8"
    >
      Radio
    </div>
  </label>
</div>
`;

exports[`Radio > Snapshots > should render additional classes 1`] = `
<div>
  <label
    class="_radio_ec96d8 _radio--primary_ec96d8 _radio--md_ec96d8 other-class"
  >
    <input
      class="_radio__input_ec96d8"
      type="radio"
    />
    <span
      class="_radio__control_ec96d8"
    />
    <div
      class="_radio__text_ec96d8"
    >
      Radio
    </div>
  </label>
</div>
`;

exports[`Radio > Snapshots > should renders default component 1`] = `
<div>
  <label
    class="_radio_ec96d8 _radio--primary_ec96d8 _radio--md_ec96d8"
  >
    <input
      class="_radio__input_ec96d8"
      type="radio"
    />
    <span
      class="_radio__control_ec96d8"
    />
    <div
      class="_radio__text_ec96d8"
    >
      Radio
    </div>
  </label>
</div>
`;
